--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -1,67 +1,38 @@
-<!doctype html>
-<!-- The DOCTYPE declaration above will set the     -->
-<!-- browser's rendering engine into                -->
-<!-- "Standards Mode". Replacing this declaration   -->
-<!-- with a "Quirks Mode" doctype is not supported. -->
-
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>KML Layers</title>
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+      }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script>
+function initialize() {
+  var vancouver = new google.maps.LatLng(49.2496600,-123.1193400);
+  var mapOptions = {
+    zoom: 11,
+    center: vancouver
+  }
 
-<!--                                                               -->
-<!-- Consider inlining CSS to reduce the number of requested files -->
-<!--                                                               -->
-<link type="text/css" rel="stylesheet" href="KillersProject.css">
+  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-<!--                                           -->
-<!-- Any title is fine                         -->
-<!--                                           -->
-<title>Cereal Killers</title>
+  var ctaLayer = new google.maps.KmlLayer({
+    url: 'http://data.vancouver.ca/download/kml/food_vendor_pilot.kmz'
+  });
+  ctaLayer.setMap(map);
+}
 
-<!--                                           -->
-<!-- This script loads your compiled module.   -->
-<!-- If you add any GWT meta tags, they must   -->
-<!-- be added before this line.                -->
-<!--                                           -->
-<script type="text/javascript" language="javascript"
-	src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-<script type="text/javascript" language="javascript"
-	src="killersproject/killersproject.nocache.js"></script>
-</head>
+google.maps.event.addDomListener(window, 'load', initialize);
 
-<!--                                           -->
-<!-- The body can have arbitrary html, or      -->
-<!-- you can leave the body empty if you want  -->
-<!-- to create a completely dynamic UI.        -->
-<!--                                           -->
-<body>
-
-	<!-- OPTIONAL: include this if you want history support -->
-	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
-		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
-
-	<!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
-	<noscript>
-		<div
-			style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
-			Your web browser must have JavaScript enabled in order for this
-			application to display correctly.</div>
-	</noscript>
-
-	<h1>Cereal Killers</h1>
-
-	<table align="center">
-		<tr>
-			<td colspan="2" style="font-weight: bold;">Please enter your
-				name:</td>
-		</tr>
-		<tr>
-			<td id="nameFieldContainer"></td>
-			<td id="sendButtonContainer"></td>
-		</tr>
-		<tr>
-			<td colspan="2" style="color: red;" id="errorLabelContainer"></td>
-		</tr>
-	</table>
-</body>
+    </script>
+  </head>
+  <body>
+    <div id="map-canvas"></div>
+  </body>
 </html>
