--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -3,7 +3,9 @@
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
-<title>KML Layers</title>
+<link type="text/css" rel="stylesheet" href="KillersProject.css">
+<link rel="icon" type="image/png" href="250px-Cereal_Killer.png">
+<title>Cereal Killers</title>
 <style>
 html,body,#map-canvas {
 	height: 100%;
@@ -35,6 +37,7 @@ function initialize() {
     url: 'http://data.vancouver.ca/download/kml/food_vendor_pilot.kmz'
   });
 }
+
 google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
