--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -41,6 +41,15 @@ function initialize() {
 google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
+    
+    <!--                                           -->
+<!-- This script loads your compiled module.   -->
+<!-- If you add any GWT meta tags, they must   -->
+<!-- be added before this line.                -->
+<!--                                           -->
+<script type="text/javascript" language="javascript"
+	src="killersproject/killersproject.nocache.js"></script>
+	
 </head>
 <body>
 	<div id="map-canvas" style="width: 79%; height: 100%; float: left"></div>
