--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -41,18 +41,19 @@ function initialize() {
 google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
-    
-    <!--                                           -->
+
+<!--                                           -->
 <!-- This script loads your compiled module.   -->
 <!-- If you add any GWT meta tags, they must   -->
 <!-- be added before this line.                -->
 <!--                                           -->
 <script type="text/javascript" language="javascript"
 	src="killersproject/killersproject.nocache.js"></script>
-	
+
 </head>
 <body>
-	<div id="map-canvas" style="width: 79%; height: 100%; float: left"></div>
-	<div id="content-window" style="width: 19%; height: 100%; float: left"></div>
+	<div id="map-canvas" style="width: 75%; height: 100%; float: left"></div>
+	<div id="content-window" style="width: 20%; height: 100%; float: left">
+	</div>
 </body>
 </html>
