--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -36,6 +36,13 @@ function initialize() {
   var ctaLayer2 = new google.maps.KmlLayer({
     url: 'http://data.vancouver.ca/download/kml/food_vendor_pilot.kmz'
   });
+  
+  var ctaLayer3 = new google.maps.KmlLayer({
+    url: 'http://data.vancouver.ca/download/kml/parks.kmz'
+  });
+  google.maps.event.addListener(ctaLayer2, "status_changed", function() {
+    ctaLayer3.setMap(map);
+  });
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
@@ -53,6 +60,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </head>
 <body>
 	<div id="map-canvas" style="width: 75%; height: 100%; float: left"></div>
+	<div id="gap-window" style="width: 5%; height: 100%; float: left"></div>
 	<div id="content-window" style="width: 20%; height: 100%; float: left">
 	</div>
 </body>
