--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -59,6 +59,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 </head>
 <body>
+	<div id="box-window" style="width: 100%; height: 10%; float: left"></div>
 	<div id="map-canvas" style="width: 50%; height: 100%; float: left"></div>
 	<div id="gap-window" style="width: 5%; height: 100%; float: left"></div>
 	<div id="content-window" style="width: 45%; height: 100%; float: left">
