Just setting up the tones for html file.

--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<h1 style="text-align:center;">Eat and Play</h1>
+<p>Use this app to locate your favorite place to eat and play.</p>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
 <link type="text/css" rel="stylesheet" href="KillersProject.css">
