--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -59,6 +59,15 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 </head>
 <body>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+  	var js, fjs = d.getElementsByTagName(s)[0];
+  	if (d.getElementById(id)) return;
+  	js = d.createElement(s); js.id = id;
+  	js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  	fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+	<div class="fb-like" data-href="http://1-dot-killersproject310.appspot.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	<div id="box-window" style="width: 100%; height: 10%; float: left"></div>
 	<div id="map-canvas" style="width: 50%; height: 100%; float: left"></div>
 	<div id="gap-window" style="width: 5%; height: 100%; float: left"></div>
