--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1 style="text-align:center;">Eat and Play</h1>
-<p>Use this app to locate your favorite place to eat and play.</p>
+<h1 style="text-align: center;">Eat and Play</h1>
+<h2 style="text-align: center;">Use this app to locate your
+	favorite places to eat and play.</h2>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
 <link type="text/css" rel="stylesheet" href="KillersProject.css">
-<link rel="icon" type="image/png" href="250px-Cereal_Killer.png">
+<p id="demo">The blue dot displays your current location with the circle showing the nearest 1km places.</p>
+
+<div id="mapholder"></div>
 <title>Cereal Killers</title>
 <style>
 html,body,#map-canvas {
@@ -16,16 +19,44 @@ html,body,#map-canvas {
 }
 </style>
 <script
-	src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+	src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
 <script>
 function initialize() {
   var vancouver = new google.maps.LatLng(49.2496600,-123.1193400);
   var mapOptions = {
     zoom: 11,
     center: vancouver
-  }
-
+  }  
+    
   var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  
+  if(navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      var markerimage = 'http://i.stack.imgur.com/orZ4x.png';
+      var pos = new google.maps.LatLng(position.coords.latitude,
+                                       position.coords.longitude);
+
+	  var circle = new google.maps.Circle({
+  		map: map,
+  		radius: 1000,    
+  		fillColor: '#7ea7c9'
+	  });
+      
+      var marker = new google.maps.Marker({
+        map: map,
+        position: pos,
+        icon: markerimage
+      });
+      circle.bindTo('center', marker, 'position');
+
+      map.setCenter(pos);
+    }, function() {
+      handleNoGeolocation(true);
+    });
+  } else {
+    // Browser doesn't support Geolocation
+    handleNoGeolocation(false);
+  }
 
   var ctaLayer = new google.maps.KmlLayer({
     url: 'http://data.vancouver.ca/download/kml/parking_meter_rates_and_time_limits.kmz'
@@ -46,8 +77,9 @@ function initialize() {
     ctaLayer3.setMap(map);
   });
 }
-
-google.maps.event.addDomListener(window, 'load', initialize);
+  
+ google.maps.event.addDomListener(window, 'load', initialize);
+ 
 
     </script>
 
@@ -69,7 +101,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
   	js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
   	fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
-	<div class="fb-like" data-href="http://1-dot-killersproject310.appspot.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	<div class="fb-like"
+		data-href="http://1-dot-killersproject310.appspot.com/"
+		data-layout="button_count" data-action="like" data-show-faces="true"
+		data-share="true"></div>
 	<div id="box-window" style="width: 100%; height: 10%; float: left"></div>
 	<div id="map-canvas" style="width: 50%; height: 100%; float: left"></div>
 	<div id="gap-window" style="width: 5%; height: 100%; float: left"></div>
