--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -105,7 +105,7 @@ function initialize() {
 	src="killersproject/killersproject.nocache.js"></script>
 
 </head>
-<body>
+<body style="background-color:#E6E6FA">
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://test" data-text="test" data-via="Jimqi101">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	<div id="fb-root"></div>
@@ -121,9 +121,8 @@ function initialize() {
 		data-layout="button_count" data-action="like" data-show-faces="true"
 		data-share="true"></div>
 	<div id="box-window" style="width: 100%; height: 10%; float: left"></div>
-	<div id="map-canvas" style="width: 50%; height: 100%; float: left"></div>
-	<div id="gap-window" style="width: 5%; height: 100%; float: left"></div>
-	<div id="content-window" style="width: 45%; height: 100%; float: left">
+	<div id="map-canvas" style="width: 100%; height: 50%; float: left"></div>
+	<div id="content-window" style="width: 100%; height: 100%; float: left">
 	</div>
 </body>
 </html>
