Align the image at the centre

--- a/StarvingCodeMonkey/war/KillersProject.html
+++ b/StarvingCodeMonkey/war/KillersProject.html
@@ -7,8 +7,7 @@
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
 <link type="text/css" rel="stylesheet" href="KillersProject.css">
-<p id="demo">The blue dot displays your current location with the
-	circle showing the nearest 1km places.</p>
+
 
 <div id="mapholder"></div>
 <title>Cereal Killers</title>
@@ -106,6 +105,9 @@ function initialize() {
 
 </head>
 <body style="background-color:#E6E6FA">
+<p align="center"><img src="images/american-food-clipart.png" width="200" height="183"></p>
+<p id="demo">The blue dot displays your current location with the
+	circle showing the nearest 1km places.</p>
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://test" data-text="test" data-via="Jimqi101">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	<div id="fb-root"></div>
